--- a/website/templates/aberdeen.html
+++ b/website/templates/aberdeen.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/about-us.css">
+    <link rel="stylesheet" href="../static/css/aberdeen.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -26,10 +26,14 @@
         </div>
     </header>
 
-    <div class="about-container">
-        <img src="../static/images/choir2.jpg" class="about-img">
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/connect.jpg" class="event-img">
         <div class="banner-h-container">
-            <h2>Connect With Us</h2>
+            <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
             <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
@@ -37,30 +41,90 @@
                 We would love to get to know you and your family!
             </p>
         </div>
-        <div class ="bottom-menu-container">
-            <div class="bottom-menu">
-                <ul>
-                    <li><a href="/give">Give Today</a></li>
-                    <li><a href="/events">Events</a></li>
-                </ul>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Ministries</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+
+                <div class="ministries-h2"><h2>Youth Ministry</h2></div>
+                <hr class="ministries-divider">
+
+    <div class="our-impact">
+
+        <div class="impact-img">
+            <img src="../static/images/aberdeen.webp">
+            <div class="impact-content">
+
+
+                <h3>Our Impact</h3>
+    <!--        <hr class="heading-divider">-->
+
+                <p>
+                    Welcome to our vibrant church in Aberdeen, MS, where you'll find a warm and welcoming community
+                    of faith! We invite you to join us as we gather together to worship, grow spiritually, and impact
+                    our community with God's love. Our church is a place where people from all walks of life can come
+                    as they are and find acceptance, encouragement, and support. With heartfelt worship, inspiring
+                    messages, and engaging programs for all ages, we strive to create an environment where everyone
+                    can experience the transforming power of God's presence. Whether you're new to the area or
+                    searching for a spiritual home, we welcome you with open arms. Come and be a part of our church
+                    family as we journey together in faith, serve our community, and grow in our love for God and
+                    one another. We can't wait to meet you and share in the blessings of fellowship and worship.
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="buffer2"></div>
+
+
+    <div class="connect">
+        <div class="connect-back">
+            <div class="highlights-container">
+                <div class="grid-backdrop">
+
+            <div class="grid">
+                <div>
+                    <div class="image">
+                        <img src="../static/images/logo.png" class="image__img">
+                        <div class="image__overlay image__overlay--primary">
+                        <div class="image__title">Event Title</div>
+                        <div class="image__description">
+                            Event overview
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="more-grid-backdrop">
+
+            </div>
+        </div>
+        </div>
+
+            <div class="connect-content">
+                <h3>Get Connected</h3>
+                <p>
+                    Looking for a place to belong, grow, and make a difference? Join our church in Aberdeen, MS!
+                    Experience uplifting worship, inspiring teachings, and a welcoming community. Connect with
+                    like-minded individuals, engage in meaningful programs, and discover the joy of serving others.
+                    Come as you are and be a part of our church family. We can't wait to meet you!
+                </p>
             </div>
         </div>
     </div>
 
-    <div class="connect-with-us-container">
-        <img src="../static/images/wide.jpg">
-        <div class="connect-with-us">
-            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
-            <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
 
-        </div>
-    </div>
-
-    <div class="buffer"></div>
 
       <div class="footer-container">
     <div class="column">
