--- a/website/templates/music-finearts.html
+++ b/website/templates/music-finearts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/about-us.css">
+    <link rel="stylesheet" href="../static/css/music-finearts.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -26,10 +26,14 @@
         </div>
     </header>
 
-    <div class="about-container">
-        <img src="../static/images/choir2.jpg" class="about-img">
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/connect.jpg" class="event-img">
         <div class="banner-h-container">
-            <h2>Connect With Us</h2>
+            <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
             <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
@@ -37,30 +41,93 @@
                 We would love to get to know you and your family!
             </p>
         </div>
-        <div class ="bottom-menu-container">
-            <div class="bottom-menu">
-                <ul>
-                    <li><a href="/give">Give Today</a></li>
-                    <li><a href="/events">Events</a></li>
-                </ul>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Ministries</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+
+                <div class="ministries-h2"><h2>Music & Fine Arts</h2></div>
+                <hr class="ministries-divider">
+
+    <div class="our-impact">
+
+        <div class="impact-img">
+            <img src="../static/images/singer.jpg">
+            <div class="impact-content">
+
+
+                <h3>Our Impact</h3>
+    <!--        <hr class="heading-divider">-->
+
+                <p>
+                    Welcome to our Music & Fine Arts Ministry, where creativity and worship converge to create a
+                    vibrant and inspiring experience! We invite you to join us on a captivating journey of artistic
+                    expression, where talents are nurtured, hearts are uplifted, and God is glorified. Whether you have
+                    a passion for music, dance, drama, visual arts, or any other form of creative expression, there's
+                    a place for you in our ministry. Through rehearsals, performances, and collaborative projects, we
+                    aim to create a space where your gifts can flourish and be used to impact lives. Join our talented
+                    and diverse community as we use our creativity to connect with God and touch the hearts of others.
+                    Together, let's celebrate the beauty of artistic expression and create meaningful experiences that
+                    inspire, encourage, and bring joy to all who encounter our ministry.
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="buffer2"></div>
+
+
+    <div class="connect">
+        <div class="connect-back">
+            <div class="highlights-container">
+                <div class="grid-backdrop">
+
+            <div class="grid">
+                <div>
+                    <div class="image">
+                        <img src="../static/images/logo.png" class="image__img">
+                        <div class="image__overlay image__overlay--primary">
+                        <div class="image__title">Event Title</div>
+                        <div class="image__description">
+                            Event overview
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="more-grid-backdrop">
+
+            </div>
+        </div>
+        </div>
+
+            <div class="connect-content">
+                <h3>Get Connected</h3>
+                <p>
+                    Unleash your creativity and join our Music & Fine Arts Ministry. Whether you sing, play an
+                    instrument, dance, act, or have a passion for any form of artistic expression, we welcome you.
+                    Discover a supportive community where your talents can flourish and be used to worship and inspire
+                    others. Experience the joy of collaborative projects, exciting performances, and spiritual growth.
+                    Connect with us and let's create something beautiful together.
+                </p>
             </div>
         </div>
     </div>
 
-    <div class="connect-with-us-container">
-        <img src="../static/images/wide.jpg">
-        <div class="connect-with-us">
-            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
-            <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
 
-        </div>
-    </div>
 
-    <div class="buffer"></div>
+
 
       <div class="footer-container">
     <div class="column">
