--- a/website/templates/sundayschool.html
+++ b/website/templates/sundayschool.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/about-us.css">
+    <link rel="stylesheet" href="../static/css/sundayschool.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -26,10 +26,14 @@
         </div>
     </header>
 
-    <div class="about-container">
-        <img src="../static/images/choir2.jpg" class="about-img">
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/connect.jpg" class="event-img">
         <div class="banner-h-container">
-            <h2>Connect With Us</h2>
+            <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
             <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
@@ -37,30 +41,92 @@
                 We would love to get to know you and your family!
             </p>
         </div>
-        <div class ="bottom-menu-container">
-            <div class="bottom-menu">
-                <ul>
-                    <li><a href="/give">Give Today</a></li>
-                    <li><a href="/events">Events</a></li>
-                </ul>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Ministries</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+
+                <div class="ministries-h2"><h2>Sunday School</h2></div>
+                <hr class="ministries-divider">
+
+    <div class="our-impact">
+
+        <div class="impact-img">
+            <img src="../static/images/sundayskool.jpg">
+            <div class="impact-content">
+
+
+                <h3>Our Impact</h3>
+    <!--        <hr class="heading-divider">-->
+
+                <p>
+                    Welcome to our Sunday School Ministry, where children and adults alike discover the joy of learning,
+                    growing, and experiencing God's love together! We invite you to join our dynamic and welcoming
+                    community as we dive into engaging Bible lessons, interactive activities, and meaningful
+                    discussions that inspire spiritual growth. Whether you're a parent looking for a nurturing
+                    environment for your children or an individual seeking to deepen your faith journey, Sunday
+                    School is a place where everyone is embraced and encouraged to explore the riches of God's Word.
+                    Come as you are, connect with others on the same journey, and experience the transformative power
+                    of Sunday School. Together, let's delve into the truths of Scripture, build lasting friendships,
+                    and encounter God in meaningful ways. Join us this Sunday and be part of an exciting adventure of
+                    faith and discovery!
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="buffer2"></div>
+
+
+    <div class="connect">
+        <div class="connect-back">
+            <div class="highlights-container">
+                <div class="grid-backdrop">
+
+            <div class="grid">
+                <div>
+                    <div class="image">
+                        <img src="../static/images/logo.png" class="image__img">
+                        <div class="image__overlay image__overlay--primary">
+                        <div class="image__title">Event Title</div>
+                        <div class="image__description">
+                            Event overview
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="more-grid-backdrop">
+
+            </div>
+        </div>
+        </div>
+
+            <div class="connect-content">
+                <h3>Get Connected</h3>
+                <p>
+                    Join our Sunday School Ministry and discover the joy of learning, growing, and connecting with
+                    God and others. All ages are welcome as we dive into engaging lessons, build lasting friendships,
+                    and deepen our faith journey together. Get connected and experience the transformative power of
+                    Sunday School in a warm and welcoming community.
+                </p>
             </div>
         </div>
     </div>
 
-    <div class="connect-with-us-container">
-        <img src="../static/images/wide.jpg">
-        <div class="connect-with-us">
-            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
-            <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
 
-        </div>
-    </div>
 
-    <div class="buffer"></div>
 
       <div class="footer-container">
     <div class="column">
