--- a/website/static/css/about-us.css
+++ b/website/static/css/about-us.css
@@ -2,6 +2,9 @@
     --nav-color: black;
     --nav-color2: rgb(223,213,213);
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
+    --grey: rgb(230, 223, 223);
+    --grey1: rgb(174, 158,158);
+    --burgundy-overlay: rgba(122,59,59,0.5);
 
 }
 
@@ -9,6 +12,7 @@ body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
 	font-weight: 400;
+
 }
 
 header{
@@ -18,11 +22,7 @@ header{
     text-align: center;
     z-index: 99;
     height: 80px;
-}
 
-.header1{
-    width: 100%;
-    height: 80px;
 }
 
 
@@ -34,7 +34,9 @@ header{
 
 .nav-logo{
     width: auto;
-    height: 80px;
+    height: 60px;
+    position: relative;
+    top: 10px;
 
 }
 
@@ -91,6 +93,7 @@ nav a{
     color: white;
     text-decoration: none;
     font-size: 14px;
+    font-weight: 100;
     text-transform: uppercase;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
@@ -124,103 +127,127 @@ nav a:hover{
     transition: opacity 250ms ease-in-out 250ms;
 
 }
-.video-container {
-    position: relative;
+
+.about-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden; /* Enable vertical scrolling if the content overflows */
+
+}
+
+.about-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+
+}
+
+.bottom-menu-container{
     width: 100%;
-    height: 400px;
-    overflow: hidden; /* Enable vertical scrolling if the content overflows */
-  
-  }
-  
-  /* Style the video element to cover the entire container */
-  .video-container video {
+    height: 25px;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  
-  }
-  .splash-image-container{
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    bottom: 200px;
+    bottom: 0px;
     display: flex;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 10px;
+    padding: 0px;
+    margin: 0px;
+    background: var(--burgundy);
 }
 
-.splash-image img{
-    width: 150px;
-    height: 150px;
+.bottom-menu{
+    display: none;
 }
 
-.bckgrnd-image{
-    opacity: 1;
+
+
+
+h2 {
+  position: relative;
+  text-align: center;
+  top: 10px;
+  margin: 0px;
+  font-weight: 450;
 }
 
-.bckgrnd-image-container{
-    height: 475px;
+p {
+  position: relative;
+  top: 25px;
+  margin: 0px;
+  padding: 10px;
+  text-align: center;
+  font-weight: 300;
+
+}
+
+.connect-with-us-container{
+    display: none;
+}
+
+h4{
+    position: relative;
+    display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    position: relative;
 }
 
-.Title-text-container{
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.footer-links{
+    display: none;
+}
+.footer-links-mobile{
+    display: block;
+    margin-top: 30px;
+
+}
+
+
+
+.footer-logo-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-logo{
+    width: 20%;
+
+}
+h4{
+   color: black;
+   font-size: 24px;
+   font-weight: 400;
+   text-align: center;
+   margin: 0px;
+   margin-top: 50px;
+   padding: 0px;
+   }
+
+.column p{
+    color: black;
+    font-size: 18px;
+    font-weight: 100;
     text-align: center;
-    z-index: 2;
-}
-.Body-text-container{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    z-index: 2;
-}
-.Body-text-container p{
-    color: white;
-    font-size: 24px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    margin-left: 100px;
-    margin-right: 100px;
+    margin: 0px;
+    margin-top: 0px;
+    padding: 0px;
 }
 
-.Title-text-container h1{
-    color: rgba(255, 255, 255, 1);
-    font-size: 72px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-}
-
-.bckgrnd-image-container img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.shade{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(122,59,59, .15);
-    z-index: 1;
-}
-
-
+.socials{
+            display: flex;
+            width: 100%;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+        }
 
 @media screen and (min-width: 769px){
 
@@ -254,7 +281,7 @@ nav a:hover{
         .nav-logo {
             all: unset;
             width: auto;
-            height: 120px;
+            height: 100px;
             margin-right: 0px;
             margin-left: 0px;
 
@@ -303,6 +330,332 @@ nav a:hover{
             transform: scale(1,1);
         }
 
+        .about-container {
+          position: relative;
+          top: auto;
+          width: 100%;
+          height: 425px;
+          background: var(--burgundy-overlay);
+        /*overflow: none; fixes scroll into whitespace - might be a problem - to fix (delete and set widths to 100%)*/
 
+        }
+
+        .about-img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          z-index: -1;
+        }
+
+
+        .bottom-menu-container{
+            width: 100%;
+            height: 50px;
+            bottom: 0px;
+            position: absolute;
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            padding: 0px;
+            margin: 0px;
+            background: var(--burgundy) ;
+
+        }
+
+        .bottom-menu{
+            padding: 0px;
+            width: 521px;
+            height: 56px;
+            display: flex;
+            justify-content: space-between;
+
+        }
+
+        .bottom-menu ul{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 0;
+        }
+
+        .bottom-menu li{
+            padding: 0px;
+            display: inline-block;
+            margin-right: 0px;
+            margin-left: 0px;
+
+        }
+
+        .bottom-menu a{
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+            text-transform: uppercase;
+            white-space: nowrap;
+            font-weight: 100;
+
+        }
+        .bottom-menu-container a:hover {
+            color: black;
+        }
+
+
+.banner-h-container{
+    position: relative;
+    display: flex;
+    width: 90%;
+    margin: 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 
 }
+
+
+.banner-h-container h2{
+    color: white;
+    font-weight: 400;
+    font-size: 22px;
+
+}
+
+.banner-msg{
+    position: relative;
+    top: 150px;
+    display: flex;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+}
+
+.banner-msg p{
+    color: white;
+    font-weight: 200;
+    margin: 5px;
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+
+
+
+
+        .connect-with-us-container{
+            margin-top: 1000px;
+            display: flex;
+            height: 829px;
+            width: auto;
+            position: relative;
+            background-image: url('join-us.jpg');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .connect-with-us-container img {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            z-index: -1;
+        }
+
+        .connect-with-us{
+            position: relative;
+            height: 452px;
+            width: 869px;
+            background: rgba(122,59,59,.9);
+            display: flex;
+            justify-content: center;
+
+        }
+
+        h3{
+            color: white;
+            font-size: 48px;
+            font-weight: 300;
+            text-align: center;
+            padding-left: 38px;
+            padding-right: 38px;
+            padding-top: 10px;
+
+        }
+
+        .connect-with-us-divider{
+            width: 250px;
+            display: flex;
+            position: absolute;
+            top: 200px;
+            padding: 0px;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            border-top: 1px dotted white;
+        }
+
+        .connect-with-us p{
+            color: white;
+            font-size: 24px;
+            font-weight: 100;
+            text-align: center;
+            padding-left: 38px;
+            padding-right: 38px;
+            padding-top: 10px;
+            position: absolute;
+            top: 250px;
+        }
+
+        .connect-with-us li{
+            background: rgba(122,59,59,.9);
+            border: 1px solid white;
+            list-style: none;
+            width: 267px;
+            height: 41px;
+            margin: 0px;
+            padding: 0px;
+            position: absolute;
+            top: 375px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        .connect-with-us li a{
+            display: flex;
+            text-decoration: none;
+            color: white;
+            text-align: center;
+            margin: 0px;
+            padding: 0px;
+        }
+
+        .connect-with-us li:hover{
+            background: rgb(47,46,46);
+            transition: background-color 0.5s ease;
+        }
+
+        .footer-container {
+              all: unset;
+              display: flex;
+              justify-content: center;
+              align-items: flex-start;
+              background: rgb(47,46,46);
+              overflow: hidden; /* Enable vertical scrolling if the content overflows */
+
+            }
+        .footer-logo-container{
+            all: unset;
+            padding: 0px;
+            margin: 0px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+        }
+        .footer-logo{
+            all: unset;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px;
+            width: auto;
+            height: 110px;
+            margin: 25px;
+        }
+
+        .column {
+              all: unset;
+              padding: 20px;
+              text-align: center;
+              color: white;
+              margin-bottom: 50px;
+              margin-left: 75px;
+              margin-right: 75px;
+
+            }
+
+        .column p{
+            position: relative;
+            top: 10px;
+            color: white;
+            text-align: center;
+            margin: 0px;
+            padding: 0px;
+            font-weight: 100;
+        }
+        .buffer{
+            width: 100%;
+            height: 25px;
+            background: var(--burgundy);
+        }
+        @media screen and (max-width: 1150px){
+            .column {
+              display: none;
+
+            }
+            .footer-divider{
+                display: none;
+            }
+        }
+        .footer-divider {
+              position: relative;
+              top: 25px;
+              width: 0px;
+              height: 175px;
+              background-color: black;
+              border: 1px dotted white;
+
+            }
+
+        .socials{
+            all: unset;
+            display: flex;
+            width: 200px;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .social-logo{
+            all: unset;
+            display: flex;
+            width: 100%;
+        }
+
+        .footer-links{
+            all: unset;
+            margin-left: 100px;
+            margin-right: 100px;
+
+        }
+        .footer-links p{
+            color: white;
+            font-size: 12px;
+        }
+
+        h4{
+            color: white;
+            font-size: 24px;
+            font-weight: 400;
+            text-align: center;
+            margin: 0px;
+            margin-top: 20px;
+            padding: 0px;
+        }
+        .footer-links-mobile{
+            display: none;
+        }
+
+}
+
