--- a/website/templates/evangelism-outreach.html
+++ b/website/templates/evangelism-outreach.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/about-us.css">
+    <link rel="stylesheet" href="../static/css/evangelism-outreach.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -26,10 +26,14 @@
         </div>
     </header>
 
-    <div class="about-container">
-        <img src="../static/images/choir2.jpg" class="about-img">
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/connect.jpg" class="event-img">
         <div class="banner-h-container">
-            <h2>Connect With Us</h2>
+            <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
             <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
@@ -37,30 +41,91 @@
                 We would love to get to know you and your family!
             </p>
         </div>
-        <div class ="bottom-menu-container">
-            <div class="bottom-menu">
-                <ul>
-                    <li><a href="/give">Give Today</a></li>
-                    <li><a href="/events">Events</a></li>
-                </ul>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Ministries</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+
+                <div class="ministries-h2"><h2>Evangelism & Outreach</h2></div>
+                <hr class="ministries-divider">
+
+    <div class="our-impact">
+
+        <div class="impact-img">
+            <img src="../static/images/evangelism.jpg">
+            <div class="impact-content">
+
+
+                <h3>Our Impact</h3>
+    <!--        <hr class="heading-divider">-->
+
+                <p>
+                    Welcome to our Evangelism and Outreach Ministry, where we are passionate about sharing the love of
+                    Christ and making a positive impact in our community and beyond. We invite you to join us in
+                    reaching out to those in need, spreading hope, and making a difference in people's lives. Through
+                    various outreach initiatives, missions, and community service projects, we strive to demonstrate
+                    God's love in tangible ways. Whether it's feeding the hungry, supporting local organizations, or
+                    sharing the message of salvation, there's a place for you to get involved and be part of something
+                    meaningful. Together, let's extend a hand of compassion, bring light to the darkness, and be agents
+                    of transformation in our world. Join our Evangelism and Outreach Ministry and discover the joy of
+                    serving others while growing in your own faith. Let's make a lasting impact together!
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="buffer2"></div>
+
+
+    <div class="connect">
+        <div class="connect-back">
+            <div class="highlights-container">
+                <div class="grid-backdrop">
+
+            <div class="grid">
+                <div>
+                    <div class="image">
+                        <img src="../static/images/logo.png" class="image__img">
+                        <div class="image__overlay image__overlay--primary">
+                        <div class="image__title">Event Title</div>
+                        <div class="image__description">
+                            Event overview
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="more-grid-backdrop">
+
+            </div>
+        </div>
+        </div>
+
+            <div class="connect-content">
+                <h3>Get Connected</h3>
+                <p>
+                    Ready to make a difference in the lives of others? Join our Evangelism and Outreach Ministry and
+                    be part of a team spreading God's love. From local outreach to missions, there's a place for you to
+                    make an impact. Join us today and be the change!
+                </p>
             </div>
         </div>
     </div>
 
-    <div class="connect-with-us-container">
-        <img src="../static/images/wide.jpg">
-        <div class="connect-with-us">
-            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
-            <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
 
-        </div>
-    </div>
 
-    <div class="buffer"></div>
+
 
       <div class="footer-container">
     <div class="column">
