--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -39,7 +39,7 @@
         <div class="floating-button-container">
             <div class="floating-button">
                 <ul>
-                    <li><a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5">GIVE NOW</a></li>
+                    <a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5"><li>GIVE NOW</li></a>
                 </ul>
             </div>
         </div>
